# ai-algorithms

./: README.md
.github/workflows/: release.yml
ai-1/: Cargo.toml
ai-1/src/: main.rs  simulated_annealing.rs
ai-2/: Cargo.toml
ai-2/src/: art1.rs  main.rs
ai-3/: Cargo.toml
ai-3/src/: ant_algo.rs  main.rs  settings.rs
ant/: Cargo.toml  README.md
ant-src/src/: ant_algo.rs
ant/src/: ant_algo.rs  main.rs  settings.rs
art-1/: Cargo.toml  README.md
art-1/src/: main.rs
genetic/: Cargo.toml  prebuild.sh
genetic-src/: Cargo.toml  README.md
genetic-src/src/: main.rs
genetic/src/: genetic.rs  main.rs
hopfield/: README.md
hopfield-src/: Cargo.toml
hopfield/src/: hopfield.rs  main.rs
kosko/: Cargo.toml  README.md
kosko-src/src/: kosko.rs
kosko/src/: main.rs
neuro/: Cargo.toml  README.md
neuro-src/: Cargo.toml  README.md
neuro-src/src/: error_func.rs  main.rs
neuro/src/: activation.rs  main.rs  neuro.rs
sim-ann/: Cargo.toml  README.md
sim-ann/src/: main.rs  simulated_annealing.rs
