[package]
name = "ai-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui-plotter = "0.3.0"
env_logger = "0.10.0"
image = "0.24.7"
random-string = "1.0.0"
rfd = "0.11.4"
