[package]
name = "ai-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = "0.22.0"
egui_grid = "0.2.0"
env_logger = "0.10.0"
rand = "0.8.5"
