[package]
name = "neuro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = "0.22.0"
egui_graph = "0.2.0"
egui_graphs = "0.9.0"
egui_grid = "0.2.0"
env_logger = "0.10.0"
petgraph = "0.6.4"
rand = "0.8.5"
poll-promise = "0.3.0"
crossbeam = "0.8.2"
fdg-sim = "0.9.1"
nalgebra = "0.32.3"
mnist_read = "1.0.1"
notify = "6.1.1"
egui_file = "0.11.0"
image = "0.24.7"
