[package]
name = "sim-ann"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = { version = "0.22.0", features = ["image"] }
env_logger = "0.10.0"
poll-promise = "0.3.0"
rand = "0.8.5"
